// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IP Overview Component rendering it renders the default IP Overview 1`] = `
<IpOverview
  anomaliesData={
    Object {
      "anomalies": Array [
        Object {
          "detectorIndex": 0,
          "entityName": "process.name",
          "entityValue": "du",
          "influencers": Array [
            Object {
              "host.name": "zeek-iowa",
            },
            Object {
              "process.name": "du",
            },
            Object {
              "user.name": "root",
            },
          ],
          "jobId": "job-1",
          "rowId": "1561157194802_0",
          "severity": 16.193669439507826,
          "source": Object {
            "actual": Array [
              1,
            ],
            "bucket_span": 900,
            "by_field_name": "process.name",
            "by_field_value": "du",
            "detector_index": 0,
            "function": "rare",
            "function_description": "rare",
            "influencers": Array [
              Object {
                "influencer_field_name": "user.name",
                "influencer_field_values": Array [
                  "root",
                ],
              },
              Object {
                "influencer_field_name": "process.name",
                "influencer_field_values": Array [
                  "du",
                ],
              },
              Object {
                "influencer_field_name": "host.name",
                "influencer_field_values": Array [
                  "zeek-iowa",
                ],
              },
            ],
            "initial_record_score": 16.193669439507826,
            "is_interim": false,
            "job_id": "job-1",
            "multi_bucket_impact": 0,
            "partition_field_name": "host.name",
            "partition_field_value": "zeek-iowa",
            "probability": 0.024041164411288146,
            "record_score": 16.193669439507826,
            "result_type": "record",
            "timestamp": 1560664800000,
            "typical": Array [
              0.024041164411288146,
            ],
          },
          "time": 1560664800000,
        },
        Object {
          "detectorIndex": 0,
          "entityName": "process.name",
          "entityValue": "ls",
          "influencers": Array [
            Object {
              "host.name": "zeek-iowa",
            },
            Object {
              "process.name": "ls",
            },
            Object {
              "user.name": "root",
            },
          ],
          "jobId": "job-2",
          "rowId": "1561157194802_1",
          "severity": 16.193669439507826,
          "source": Object {
            "actual": Array [
              1,
            ],
            "bucket_span": 900,
            "by_field_name": "process.name",
            "by_field_value": "ls",
            "detector_index": 0,
            "function": "rare",
            "function_description": "rare",
            "influencers": Array [
              Object {
                "influencer_field_name": "user.name",
                "influencer_field_values": Array [
                  "root",
                ],
              },
              Object {
                "influencer_field_name": "process.name",
                "influencer_field_values": Array [
                  "ls",
                ],
              },
              Object {
                "influencer_field_name": "host.name",
                "influencer_field_values": Array [
                  "zeek-iowa",
                ],
              },
            ],
            "initial_record_score": 16.193669439507826,
            "is_interim": false,
            "job_id": "job-2",
            "multi_bucket_impact": 0,
            "partition_field_name": "host.name",
            "partition_field_value": "zeek-iowa",
            "probability": 0.024041164411288146,
            "record_score": 16.193669439507826,
            "result_type": "record",
            "timestamp": 1560664800000,
            "typical": Array [
              0.024041164411288146,
            ],
          },
          "time": 1560664800000,
        },
      ],
      "interval": "day",
    }
  }
  endDate="2019-06-18T06:00:00.000Z"
  flowTarget="source"
  id="ipOverview"
  indexPatterns={Array []}
  ip="10.10.10.10"
  isInDetailsSidePanel={false}
  isLoadingAnomaliesData={false}
  jobNameById={Object {}}
  loading={false}
  narrowDateRange={[MockFunction]}
  scopeId="default"
  startDate="2019-06-15T06:00:00.000Z"
  type="details"
  updateFlowTargetAction={[MockFunction]}
/>
`;

exports[`IP Overview Component rendering it renders the side panel IP overview 1`] = `
<IpOverview
  anomaliesData={
    Object {
      "anomalies": Array [
        Object {
          "detectorIndex": 0,
          "entityName": "process.name",
          "entityValue": "du",
          "influencers": Array [
            Object {
              "host.name": "zeek-iowa",
            },
            Object {
              "process.name": "du",
            },
            Object {
              "user.name": "root",
            },
          ],
          "jobId": "job-1",
          "rowId": "1561157194802_0",
          "severity": 16.193669439507826,
          "source": Object {
            "actual": Array [
              1,
            ],
            "bucket_span": 900,
            "by_field_name": "process.name",
            "by_field_value": "du",
            "detector_index": 0,
            "function": "rare",
            "function_description": "rare",
            "influencers": Array [
              Object {
                "influencer_field_name": "user.name",
                "influencer_field_values": Array [
                  "root",
                ],
              },
              Object {
                "influencer_field_name": "process.name",
                "influencer_field_values": Array [
                  "du",
                ],
              },
              Object {
                "influencer_field_name": "host.name",
                "influencer_field_values": Array [
                  "zeek-iowa",
                ],
              },
            ],
            "initial_record_score": 16.193669439507826,
            "is_interim": false,
            "job_id": "job-1",
            "multi_bucket_impact": 0,
            "partition_field_name": "host.name",
            "partition_field_value": "zeek-iowa",
            "probability": 0.024041164411288146,
            "record_score": 16.193669439507826,
            "result_type": "record",
            "timestamp": 1560664800000,
            "typical": Array [
              0.024041164411288146,
            ],
          },
          "time": 1560664800000,
        },
        Object {
          "detectorIndex": 0,
          "entityName": "process.name",
          "entityValue": "ls",
          "influencers": Array [
            Object {
              "host.name": "zeek-iowa",
            },
            Object {
              "process.name": "ls",
            },
            Object {
              "user.name": "root",
            },
          ],
          "jobId": "job-2",
          "rowId": "1561157194802_1",
          "severity": 16.193669439507826,
          "source": Object {
            "actual": Array [
              1,
            ],
            "bucket_span": 900,
            "by_field_name": "process.name",
            "by_field_value": "ls",
            "detector_index": 0,
            "function": "rare",
            "function_description": "rare",
            "influencers": Array [
              Object {
                "influencer_field_name": "user.name",
                "influencer_field_values": Array [
                  "root",
                ],
              },
              Object {
                "influencer_field_name": "process.name",
                "influencer_field_values": Array [
                  "ls",
                ],
              },
              Object {
                "influencer_field_name": "host.name",
                "influencer_field_values": Array [
                  "zeek-iowa",
                ],
              },
            ],
            "initial_record_score": 16.193669439507826,
            "is_interim": false,
            "job_id": "job-2",
            "multi_bucket_impact": 0,
            "partition_field_name": "host.name",
            "partition_field_value": "zeek-iowa",
            "probability": 0.024041164411288146,
            "record_score": 16.193669439507826,
            "result_type": "record",
            "timestamp": 1560664800000,
            "typical": Array [
              0.024041164411288146,
            ],
          },
          "time": 1560664800000,
        },
      ],
      "interval": "day",
    }
  }
  endDate="2019-06-18T06:00:00.000Z"
  flowTarget="source"
  id="ipOverview"
  indexPatterns={Array []}
  ip="10.10.10.10"
  isInDetailsSidePanel={true}
  isLoadingAnomaliesData={false}
  jobNameById={Object {}}
  loading={false}
  narrowDateRange={[MockFunction]}
  scopeId="default"
  startDate="2019-06-15T06:00:00.000Z"
  type="details"
  updateFlowTargetAction={[MockFunction]}
/>
`;
